[tool.poetry]
name = "refreshcss"
version = "0.5.0"
description = "Removes unused classes, ids, and element selectors from CSS."
authors = ["adamghill <adamghill@yahoo.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/adamghill/refreshcss/"
homepage = "https://github.com/adamghill/refreshcss/"
documentation = "https://github.com/adamghill/refreshcss/"
keywords = ["django", "python", "css", "html"]

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/adamghill"

[tool.poetry.dependencies]
python = "^3.10"
# cli extras
click = { version = "^8.1.7", optional = true }
charset-normalizer = {version = "^3.3.2", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-django = "^4"
pytest-cov = "^5"
pytest-benchmark = "^4"
django = "^5"
django-compressor = "^4"
django-stubs = "^5"
mypy = "^1"

[tool.poetry.extras]
cli = ["click", "charset-normalizer"]

[tool.poetry.scripts]
refreshcss = 'refreshcss.cli:cli'

[tool.ruff]
src = ["refreshcss"]
exclude = []
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore unused variables
  "F841",
   # Ignore exception strings
  "EM101", "EM102",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["coltrane"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "ARG001"]

[tool.pytest.ini_options]
addopts = "--quiet --failed-first -p no:warnings --benchmark-skip"
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
files = [
  "refreshcss"
]

[[tool.mypy.overrides]]
module = "compressor.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
